<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/Home"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/RecipeSearch"/>
    <item android:id="@+id/Recommended"
        android:icon="@drawable/ic_account_circle_24px"
        android:title="@string/Recommended"/>
    <item android:id="@+id/Nutrition"
        android:icon="@drawable/ic_camera_alt_24px"
        android:title="@string/Nutrition"/>
    <item android:id="@+id/Favourites"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/Favourites"/>
    <item android:id="@+id/Shopping"
        android:icon="@drawable/ic_directions_run_black_24dp"
        android:title="Shopping"/>
</menu>