<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/breakfastBtn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:text="@string/breakfast"
            app:layout_constraintEnd_toStartOf="@+id/lunchBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/lunchBtn"
            android:layout_width="107dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/lunch"
            app:layout_constraintEnd_toStartOf="@+id/dinnerBtn"
            app:layout_constraintStart_toEndOf="@+id/breakfastBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/dinnerBtn"
            android:layout_width="103dp"
            android:layout_height="71dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/dinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="252dp"
            android:layout_height="46dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bangers"
            android:text="@string/TimeDay"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="307dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bangers"
            android:text="@string/timeCook"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="298dp"
            android:layout_height="62dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeSlider" />

        <TextView
            android:id="@+id/timeSlider"
            android:layout_width="69dp"
            android:layout_height="35dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="12dp"
            android:text="@string/timeValue"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="327dp"
            android:layout_height="35dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/bangers"
            android:text="@string/searchFilter"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lunchBtn" />

        <Button
            android:id="@+id/timeFindRecipe"
            android:layout_width="357dp"
            android:layout_height="88dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/bangers"
            android:text="@string/findRecipe"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="162dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="78dp"
            android:layout_height="35dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="140dp"
            android:text="@string/mins"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>